# MaxManager

./: .gitignore  CHANGELOG.md  CONTEXT_FOR_NEW_CHAT.md  FINAL_STATUS.md  Force_Reload_Macro.ms  Force_Update_Advanced.ms  Force_Update_v1.0.1.ms  GROUPING_PATTERN.md  Hot_Reload_System.ms  IMPLEMENTATION_PLAN.md  INSTALLATION.md  Install_MaxManager.ms  MaxINI_Editor_Install.ms  MaxINI_Editor_Update.ms  NEXT_STEPS.md  PLUGIN_TAB_PLAN.md  README.md  README_VALIDATION.md  RESEARCH_CONCLUSION.md  RUN_IN_MAX.md  RUN_VALIDATION.md  TASK_SUMMARY.md  TESTING.md  Update_Advanced_Editor.ms  Update_v1.0.1.ms  add_26_params.py  analyze_ini_patterns.py  chatgpt_new_26_params.json  create_ultimate_master.py  maxmanager_test.py  pyproject.toml  pytest.ini  requirements.txt  run.bat  run.ps1  run_enrich.bat  run_enricher_ui.bat  run_find_new.bat  run_ui_debug.bat  run_validator.bat  (+15 more)
GeoAGR13.40/: GeoAGR_start.ms  install help.txt
SintezAGRChecker_v1.2.0/: __init__.py  blender_manifest.toml
analysis/: geoagr_intercepted_01112025_102329.ms
data/: ini_parameters_database.json  ini_parameters_knowledge_backup.json  internal_new_parameters.json  legacy_core_parameters_2014_2019.json  plugin_hidden_parameters.json
docs/: 3dsmax_ini_parameters_full_2025_2026.md  AUDIT_REPORT.md  DATABASE_FINAL_STATUS.md  DATABASE_SOURCES.md  DEVELOPMENT.md  IDEAS.md  Modern-UI-Guide.md  PLUGIN_UX_LOGIC.md  PROMPT_FOR_CHATGPT.txt  ROADMAP.md  TOP_50_CRITICAL_PARAMETERS.md  UI_TERMS.md  ULTIMATE_DATABASE_README.md  VERSION_MANAGEMENT.md  ini_parameters_database.json  ini_parameters_database_backup.json  ini_parameters_database_backup2.json  ini_parameters_database_backup3.json  maxini_internal_research_improved.json  maxini_master_verified.json  maxini_ultimate_master_v2.json  param_schema_ultimate.json  param_template.json  Автоматически добавляемые секции 3dsmax.ini (3ds Max 2025–2026).docx  Исследование.md  Команды Spec Kit.md  Рабочие параметры `3dsmax.ini` в 3ds Max 2025–2026.docx
src/: 3dsMax.ini  (+14 more)
(+211 files in other folders)
